--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           <a class="navbar-brand" href="#">
             <img src="assets/icon.png" alt="logo" width="50" />
           </a>
-          <ul
-            class="navbar-nav d-flex justify-content-center align-content-center"
-          >
+          <ul class="navbar-nav d-flex text-center">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Text 1</a>
             </li>
