--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Bootstrap web page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Navbar -->
@@ -49,6 +55,23 @@
         </div>
       </div>
     </nav>
+
+    <!-- Hero -->
+    <section class="hero align-items-stretch">
+      <div class="hero-principal">
+        <img class="hero-image" src="assets/empty.svg" alt="empty" />
+        <h1>Hi, here you can put important info</h1>
+        <h2>Also here you can add something else</h2>
+      </div>
+      <div class="hero-inferior">
+        <img
+          class="hero-inferior-img img-fluid"
+          src="assets/hero-inferior.svg"
+          alt="hero-inferior"
+        />
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
