--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
       </div>
     </section>
 
+    <!-- About -->
+    <section class="about-me dark-section">
+      <div class="box">
+        <h2 class="section-title">Info about the page owner</h2>
+        <p class="section-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+          commodo consequat congue. Nam nec turpis libero. Nunc non semper ante.
+          Sed ex dui, consectetur non sollicitudin non, volutpat non arcu. In
+          lectus metus, mattis eu volutpat et, bibendum in mauris. Cras sodales
+          condimentum nunc. Nulla at tortor at arcu pretium blandit. Maecenas
+          nec nibh id orci interdum placerat ut non enim.
+        </p>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
