--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Bootstrap web page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -84,6 +88,64 @@
           condimentum nunc. Nulla at tortor at arcu pretium blandit. Maecenas
           nec nibh id orci interdum placerat ut non enim.
         </p>
+      </div>
+    </section>
+
+    <!-- services -->
+    <section class="services white-section">
+      <div class="container text-center">
+        <div class="row">
+          <div class="column col-12 col-md-4">
+            <i class="bi bi-emoji-grin"></i>
+            <p class="services-title">Title 1</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              commodo consequat congue. Nam nec turpis libero. Nunc non semper
+              ante. Sed ex dui, consectetur non sollicitudin non, volutpat non
+              arcu.
+            </p>
+            <div class="badges-container">
+              <span class="badge text-bg-primary">First</span>
+              <span class="badge text-bg-primary">Second</span>
+              <span class="badge text-bg-primary">Third</span>
+              <span class="badge text-bg-primary">Fourth</span>
+            </div>
+          </div>
+
+          <div class="column col-12 col-md-4">
+            <i class="bi bi-emoji-heart-eyes"></i>
+            <p class="services-title">Title 2</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              commodo consequat congue. Nam nec turpis libero. Nunc non semper
+              ante. Sed ex dui, consectetur non sollicitudin non, volutpat non
+              arcu.
+            </p>
+            <div class="badges-container">
+              <span class="badge text-bg-primary">First</span>
+              <span class="badge text-bg-primary">Second</span>
+              <span class="badge text-bg-primary">Third</span>
+              <span class="badge text-bg-primary">Fourth</span>
+            </div>
+          </div>
+
+          <div class="column col-12 col-md-4">
+            <i class="bi bi-emoji-sunglasses"></i>
+            <p class="services-title">Title 3</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              commodo consequat congue. Nam nec turpis libero. Nunc non semper
+              ante. Sed ex dui, consectetur non sollicitudin non, volutpat non
+              arcu.
+            </p>
+            <div class="badges-container">
+              <span class="badge text-bg-primary">First</span>
+              <span class="badge text-bg-primary">Second</span>
+              <span class="badge text-bg-primary">Third</span>
+              <span class="badge text-bg-primary">Fourth</span>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
