--- a/index.html
+++ b/index.html
@@ -149,6 +149,131 @@
       </div>
     </section>
 
+    <!-- Cards -->
+    <section class="recent white-section d-flex flex-column">
+      <h2 class="section-title dark-text">Products</h2>
+      <h3 class="section-description">Description about products</h3>
+
+      <div class="container text-center cards-container">
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="product">
+              <img src="assets/project1.png" alt="card 1" />
+              <div class="overlay">
+                <p>Card 1</p>
+                <div class="icons-container">
+                  <a href="#">
+                    <i class="bi bi-emoji-tear"></i>
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-emoji-expressionless"></i>
+                  </a>
+                </div>
+                <div class="icons-container"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="product">
+              <img src="assets/project2.png" alt="card 1" />
+              <div class="overlay">
+                <p>Card 2</p>
+                <div class="icons-container">
+                  <a href="#">
+                    <i class="bi bi-emoji-tear"></i>
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-emoji-expressionless"></i>
+                  </a>
+                </div>
+                <div class="icons-container"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="product">
+              <img src="assets/project3.png" alt="card 1" />
+              <div class="overlay">
+                <p>Card 3</p>
+                <div class="icons-container">
+                  <a href="#">
+                    <i class="bi bi-emoji-tear"></i>
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-emoji-expressionless"></i>
+                  </a>
+                </div>
+                <div class="icons-container"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="product">
+              <img src="assets/project4.png" alt="card 1" />
+              <div class="overlay">
+                <p>Card 4</p>
+                <div class="icons-container">
+                  <a href="#">
+                    <i class="bi bi-emoji-tear"></i>
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-emoji-expressionless"></i>
+                  </a>
+                </div>
+                <div class="icons-container"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="product">
+              <img src="assets/project5.png" alt="card 1" />
+              <div class="overlay">
+                <p>Card 5</p>
+                <div class="icons-container">
+                  <a href="#">
+                    <i class="bi bi-emoji-tear"></i>
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-emoji-expressionless"></i>
+                  </a>
+                </div>
+                <div class="icons-container"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="product">
+              <img src="assets/project6.png" alt="card 1" />
+              <div class="overlay">
+                <p>Card 6</p>
+                <div class="icons-container">
+                  <a href="#">
+                    <i class="bi bi-emoji-tear"></i>
+                  </a>
+                  <a href="#">
+                    <i class="bi bi-emoji-expressionless"></i>
+                  </a>
+                </div>
+                <div class="icons-container"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a href="#">
+        <button type="button" class="btn btn-info">
+          See more
+          <i class="bi bi-arrow-right-circle-fill"></i>
+        </button>
+      </a>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
