--- a/index.html
+++ b/index.html
@@ -274,6 +274,26 @@
       </a>
     </section>
 
+    <!-- Articles -->
+    <section class="articles justify-content-start">
+      <h2 class="section-title dark-text">Articles</h2>
+      <div class="card">
+        <div class="card-header">Featured</div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+        </ul>
+      </div>
+
+      <button type="button" class="btn btn-info">
+        See more
+        <i class="bi bi-arrow-right-circle-fill"></i>
+      </button>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
