--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&family=Share+Tech+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -292,6 +292,92 @@
         See more
         <i class="bi bi-arrow-right-circle-fill"></i>
       </button>
+    </section>
+
+    <!-- Testimonials -->
+
+    <section class="testimonials clear-section">
+      <h2 class="section-title">Testimonials</h2>
+      <h3 class="section-description">
+        These are some testimonials from my clients
+      </h3>
+
+      <div id="testimonials-carousel" class="carousel carousel-dark slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container">
+              <img
+                class="testimonials-img rounded-circle"
+                src="assets/client1.svg"
+                alt="client 1"
+              />
+              <p class="testimonial-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse maximus metus vitae tincidunt auctor. Nullam sit
+                amet elit ac ipsum sollicitudin venenatis.
+              </p>
+              <div class="testimonial-info">
+                <p class="client">Jhon Doe</p>
+                <p class="role">Product Manager in Web Developent</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <img
+                class="testimonials-img rounded-circle"
+                src="assets/client2.svg"
+                alt="client 2"
+              />
+              <p class="testimonial-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse maximus metus vitae tincidunt auctor. Nullam sit
+                amet elit ac ipsum sollicitudin venenatis.
+              </p>
+              <div class="testimonial-info">
+                <p class="client">Jane Doe</p>
+                <p class="role">General Manager</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <img
+                class="testimonials-img rounded-circle"
+                src="assets/client3.svg"
+                alt="client 3"
+              />
+              <p class="testimonial-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Suspendisse maximus metus vitae tincidunt auctor. Nullam sit
+                amet elit ac ipsum sollicitudin venenatis.
+              </p>
+              <div class="testimonial-info">
+                <p class="client">Jack Smith</p>
+                <p class="role">Chief Financial Officer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#testimonials-carousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#testimonials-carousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </section>
 
     <script
