--- a/index.html
+++ b/index.html
@@ -380,6 +380,29 @@
       </div>
     </section>
 
+    <!-- Contacto -->
+
+    <section class="contact dark-section">
+      <div class="container">
+        <div
+          class="container text-center rectangle d-flex justify-content-evenly"
+        >
+          <div class="row">
+            <div class="col-12 col-md-4 section-title">Text 1</div>
+            <div class="col-12 col-md-4 description">Text 2</div>
+            <div class="col-12 col-md-4">
+              <a href="#">
+                <button type="button">
+                  Contact
+                  <i class="bi bi-envelope-check-fill"></i>
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
