--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Bootstrap web page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&family=Share+Tech+Mono&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Navbar -->
@@ -402,6 +400,54 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+
+    <footer
+      class="dark-section d-flex flex-column align-items-center justify-content-center"
+    >
+      <img class="footer-logo" src="assets/white-icon.svg" alt="logo" />
+      <p class="footer-text text-center">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />
+        Suspendisse maximus metus vitae tincidunt auctor.
+      </p>
+      <div
+        class="social-networks-icons d-flex flex-wrap align-items-center justify-content-center"
+      >
+        <a
+          href="https://twitter.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-twitter-x"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-instagram"></i>
+        </a>
+        <a
+          href="https://facebook.com/
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a
+          href="https://web.whatsapp.com/
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="bi bi-whatsapp"></i>
+        </a>
+      </div>
+
+      <div class="copyright">
+        Created by Daniel Londono &#169;
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
