--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
           </a>
           <ul class="navbar-nav d-flex text-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Text 1</a>
+              <a class="nav-link active" aria-current="page" href="#about-me">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Text 2</a>
+              <a class="nav-link" href="#recent" >Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Text 3</a>
+              <a class="nav-link" href="#testimonials">Testimonials</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Text 4</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -75,7 +75,7 @@
     </section>
 
     <!-- About -->
-    <section class="about-me dark-section">
+    <section id="about-me" class="about-me dark-section">
       <div class="box">
         <h2 class="section-title">Info about the page owner</h2>
         <p class="section-text">
@@ -90,7 +90,7 @@
     </section>
 
     <!-- services -->
-    <section class="services white-section">
+    <section id="services" class="services white-section">
       <div class="container text-center">
         <div class="row">
           <div class="column col-12 col-md-4">
@@ -148,7 +148,7 @@
     </section>
 
     <!-- Cards -->
-    <section class="recent white-section d-flex flex-column">
+    <section id="recent" class="recent white-section d-flex flex-column">
       <h2 class="section-title dark-text">Products</h2>
       <h3 class="section-description">Description about products</h3>
 
@@ -273,7 +273,7 @@
     </section>
 
     <!-- Articles -->
-    <section class="articles justify-content-start">
+    <section id="articles" class="articles justify-content-start">
       <h2 class="section-title dark-text">Articles</h2>
       <div class="card">
         <div class="card-header">Featured</div>
@@ -294,7 +294,7 @@
 
     <!-- Testimonials -->
 
-    <section class="testimonials clear-section">
+    <section id="testimonials" class="testimonials clear-section">
       <h2 class="section-title">Testimonials</h2>
       <h3 class="section-description">
         These are some testimonials from my clients
@@ -380,7 +380,7 @@
 
     <!-- Contacto -->
 
-    <section class="contact dark-section">
+    <section id="contact" class="contact dark-section">
       <div class="container">
         <div
           class="container text-center rectangle d-flex justify-content-evenly"
