--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="product">
               <img src="assets/project4.jpg" alt="card 1" />
               <div class="overlay">
-                <p>Historic brownstone in Brooklyn Heights</p>
+                <p>Historic brownstone in Brooklyn</p>
                 <div class="info-container">
                   <p>4 Bedrooms</p>
                   <p>3 Bathrooms</p>
